src/main/kustomize/develop/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    certmanager.k8s.io/cluster-issuer: cscope-ci-certificate-authority
spec:
  rules:
  - host: plessme-develop.bongladesch.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: keycloak-svc
          servicePort: 8080
      - path: /users
        backend:
          serviceName: backend-svc
          servicePort: 8080
      - path: /health
        backend:
          serviceName: backend-svc
          servicePort: 8080
      - path: /api
        backend:
          serviceName: backend-svc
          servicePort: 8080
      - path: /swagger
        backend:
          serviceName: backend-svc
          servicePort: 8080
      - path: /docs
        backend:
          serviceName: docs-svc
          servicePort: 80
  tls:
  - hosts:
    - plessme-develop.bongladesch.com
    secretName: plessme-develop-bongladesch-com-tls-secret
